--- a/index.html
+++ b/index.html
@@ -26,62 +26,43 @@
           <span class="price-card__undertitle">Website</span>
         </header>
         <main class="price-card__main-block">
-          <div class="price-card__price green">
+          <div class="price-card__price price-card__price_green">
             <span class="price-card__price-title">99€</span>
           </div>
           <p class="price-card__description">
-            Simple website made in the world's most popular CMS system,
-            Wordpress.
+            Simple website made in the world's most popular CMS system, Wordpress.
           </p>
           <section class="price-card__options-list option-list">
             <ul class="option-list__list">
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
-                  alt="green checkmark"
-                />Website in WordPress
+                <i class="option-list__checkmark option-list__checkmark_green"></i>
+                Website in WordPress
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
-                  alt="green checkmark"
-                />3 sub pages
+                <i class="option-list__checkmark option-list__checkmark_green"></i>
+                3 sub pages
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
-                  alt="green checkmark"
-                />Theme customized
+                <i class="option-list__checkmark option-list__checkmark_green"></i>
+                Theme customized
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
-                  alt="green checkmark"
-                />Help and guidance
+                <i class="option-list__checkmark option-list__checkmark_green"></i>
+                Help and guidance
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
-                  alt="green checkmark"
-                />System introduction
+                <i class="option-list__checkmark option-list__checkmark_green"></i>
+                System introduction
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_green.png"
-                  alt="green checkmark"
-                />2 weeks free support
+                <i class="option-list__checkmark option-list__checkmark_green"></i>
+                2 weeks free support
               </li>
             </ul>
           </section>
         </main>
         <footer class="price-card__footer">
-          <button class="price-card__order-btn btn green">ORDER NOW</button>
+          <button class="price-card__order-btn price-card__order-btn_green">ORDER NOW</button>
         </footer>
       </div>
     </div>
@@ -96,62 +77,43 @@
           <span class="price-card__undertitle">Website</span>
         </header>
         <main class="price-card__main-block">
-          <div class="price-card__price blue">
+          <div class="price-card__price price-card__price_blue">
             <span class="price-card__price-title">299€</span>
           </div>
           <p class="price-card__description">
-            Advanced website made in the world's most popular CMS system,
-            Wordpress.
+            Advanced website made in the world's most popular CMS system, Wordpress.
           </p>
           <section class="price-card__options-list option-list">
             <ul class="option-list__list">
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
-                  alt="green checkmark"
-                />Website in WordPress
+                <i class="option-list__checkmark option-list__checkmark_blue"></i>
+                Website in WordPress
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
-                  alt="green checkmark"
-                />3-5 sub pages
+                <i class="option-list__checkmark option-list__checkmark_blue"></i>
+                3-5 sub pages
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
-                  alt="green checkmark"
-                />Theme customized
+                <i class="option-list__checkmark option-list__checkmark_blue"></i>
+                Theme customized
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
-                  alt="green checkmark"
-                />Help and guidance
+                <i class="option-list__checkmark option-list__checkmark_blue"></i>
+                Help and guidance
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
-                  alt="green checkmark"
-                />System introduction
+                <i class="option-list__checkmark option-list__checkmark_blue"></i>
+                System introduction
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_blue.png"
-                  alt="green checkmark"
-                />1 month free support
+                <i class="option-list__checkmark option-list__checkmark_blue"></i>
+                1 month free support
               </li>
             </ul>
           </section>
         </main>
         <footer class="price-card__footer">
-          <button class="price-card__order-btn btn blue">ORDER NOW</button>
+          <button class="price-card__order-btn price-card__order-btn_blue">ORDER NOW</button>
         </footer>
       </div>
     </div>
@@ -162,62 +124,43 @@
           <span class="price-card__undertitle">Website</span>
         </header>
         <main class="price-card__main-block">
-          <div class="price-card__price orange">
+          <div class="price-card__price price-card__price_orange">
             <span class="price-card__price-title">599€</span>
           </div>
           <p class="price-card__description">
-            Your very own webshop made the world's most popular CMS system,
-            Wordpress.
+            Your very own webshop made the world's most popular CMS system, Wordpress.
           </p>
           <section class="price-card__options-list option-list">
             <ul class="option-list__list">
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
-                  alt="green checkmark"
-                />Website in WordPress
+                <i class="option-list__checkmark option-list__checkmark_orange"></i>
+                Website in WordPress
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
-                  alt="green checkmark"
-                />3-5 sub pages
+                <i class="option-list__checkmark option-list__checkmark_orange"></i>
+                3-5 sub pages
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
-                  alt="green checkmark"
-                />Theme customized
+                <i class="option-list__checkmark option-list__checkmark_orange"></i>
+                Theme customized
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
-                  alt="green checkmark"
-                />Help and guidance
+                <i class="option-list__checkmark option-list__checkmark_orange"></i>
+                Help and guidance
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
-                  alt="green checkmark"
-                />System introduction
+                <i class="option-list__checkmark option-list__checkmark_orange"></i>
+                System introduction
               </li>
               <li class="option-list__item">
-                <img
-                  class="option-list__checkmark"
-                  src="https://gromcode.s3.eu-central-1.amazonaws.com/front-end/html-css/lesson+25/verification-checkmark-symbol_orange.png"
-                  alt="green checkmark"
-                />1 month free support
+                <i class="option-list__checkmark option-list__checkmark_orange"></i>
+                1 month free support
               </li>
             </ul>
           </section>
         </main>
         <footer class="price-card__footer">
-          <button class="price-card__order-btn btn orange">ORDER NOW</button>
+          <button class="price-card__order-btn price-card__order-btn_orange">ORDER NOW</button>
         </footer>
       </div>
     </div>
